rust/macros/tests/fail/01-extra-args.stderr
error: unexpected field 'extra'
  --> tests/fail/01-extra-args.rs:14:5
   |
14 |     extra: false
   |     ^^^^^
